# Framework

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Framework-win.code-workspace  Framework.code-workspace  README.md  Tests.Framework.json  common.sh  framework-build.sh  git-pac.sh  source-build.sh
.github/workflows/: cmake-single-platform.yml
cmake/: SetUpConfigurations.cmake  buildc.sh
debugging/: msvc.natvis  my.natvis
scripts/: common-error.sh  common.sh  framework-build.sh  git-pac.sh  source-build.sh
source/: App.cpp  CMakeLists.txt  CMakeSettings.json  Cache.cpp  Cache.h  DateTime.cpp  DateTime.h  Diagnostics.cpp  Diagnostics.h  Dll.h  Exception.cpp  Exception.h  Exports.h  Framework.vcxproj  Framework.vcxproj._user  Framework.vcxproj.filters  JdeAssert.h  Log.cpp  Makefile  Process.cpp  Settings.cpp  Settings.h  SmartPointer.h  Stopwatch.cpp  Stopwatch.h  Str.cpp  StringUtilities.cpp  StringUtilities.h  TypeDefs.h  build.sh  buildc.sh  chrono.cpp  dependencies.cmake  dllmain.cpp  pc.h  settings.cpp  stdafx.h  str.cpp
source/application/: Application.cpp  Application.h  ApplicationLinux.cpp  ApplicationLinux.h  ApplicationWindows.cpp
source/collections/: Collections.h  ForwardList.h  List.h  Map.h  Queue.h  ToVec.h  UnorderedMap.h  UnorderedMapValue.h  UnorderedSet.h  Vector.h
source/coroutine/: Alarm.cpp  Alarm.h  Awaitable.h  CoLock.cpp  CoLock.h  CoWorker.cpp  CoWorker.h  Coroutine.cpp  Coroutine.h  Lock.cpp  Lock.h  LockKey.cpp  LockKey.h  Task.cpp  Task.h  Timer.cpp
source/db/: Await.cpp  Await.h  DBException.cpp  DBException.h  DBQueue.cpp  DBQueue.h  DataSource.cpp  DataSource.h  DataType.cpp  DataType.h  Database.cpp  Database.h  GraphQL.cpp  GraphQL.h  GraphQuery.cpp  GraphQuery.h  Row.h  SchemaProc.cpp  SchemaProc.h  SqlSyntax.h  Syntax.h
source/db/graphQL/: FilterQL.cpp  GraphQLHook.cpp  Insert.cpp  Insert.h  Introspection.cpp  Introspection.h  Purge.cpp  Purge.h  TableQL.cpp
source/db/types/: Schema.h  Table.cpp  Table.h  WhereClause.h
source/io/: AsioContextThread.cpp  AsioContextThread.h  Crc.h  DiskMirror.cpp  DiskMirror.h  DiskWatcher.cpp  DiskWatcher.h  File.cpp  File.h  FileAwait.cpp  FileCo.cpp  FileCo.h  ProtoClient.cpp  ProtoClient.h  ProtoUtilities.h  ServerSink.cpp  ServerSink.h  Socket.cpp  Socket.h  file.cpp  json.cpp  proto.h  tinyxml2.cpp  tinyxml2.h
source/io/drive/: DriveApi.h
source/io/json/: JObject.cpp  JValue.cpp  json.cpp
source/io/proto/: ToServerMsg.h  messages.pb.cc  messages.pb.h  messages.proto
source/io/sockets/: ProtoClient.cpp  ProtoClient.h  ProtoServer.cpp  ProtoServer.h  RestServer.cpp  RestServer.h  Socket.cpp  Socket.h
source/log/: Core.sln  Core.vcxproj  Entry.cpp  IExternalLogger.cpp  Log.cpp  LogTags.cpp  Logger.cpp  Logging.cpp  Logging.h  MemoryLog.cpp  Message.cpp  SpdLog.cpp  dllmain.cpp  log.cpp  logTags.cpp
source/log/server/: ServerSink.cpp  ServerSink.h
source/log/server/proto/: messages.pb.cc  messages.pb.h  messages.proto
source/math/: Decimal.h  MathUtilities.cpp  MathUtilities.h
source/net/: WebSocket.cpp  WebSocket.h
source/threading/: Alarm.cpp  Alarm.h  Coroutine.cpp  Coroutine.h  Execution.cpp  Interrupt.cpp  Interrupt.h  InterruptibleThread.cpp  InterruptibleThread.h  Mutex.cpp  Mutex.h  Pool.cpp  Pool.h  ReusableThread.h  Thread.cpp  Thread.h  Worker.cpp  Worker.h  execution.cpp  jthread.h  stop_token.h
source/um/: UM.cpp  UM.h  um-meta.json
tests/: AlarmTests.cpp  CMakeLists.txt  CoroutineTests.cpp  FileTests.cpp  QLTests.cpp  Tests.Framework.json  Tests.Framework.sln  Tests.Framework.vcxproj  Tests.Framework.vcxproj._user  UMTests.cpp  XZTests.cpp  build.sh  main.cpp
tests/config/: Framework.Tests.jsonnet
tests/log/: LogGeneralTests.cpp
